[gd_scene load_steps=6 format=3 uid="uid://biepbkld7gmmm"]

[ext_resource type="Script" uid="uid://p16mlmdlm501" path="res://coding/letter.gd" id="1_5s03l"]
[ext_resource type="Texture2D" uid="uid://baa04lxoude1s" path="res://assets/graphics/desk wiew/letters/envelopes.jpg" id="1_7j2j7"]
[ext_resource type="Texture2D" uid="uid://7jb4xgmsa6fs" path="res://assets/graphics/desk wiew/letters/letter placeholder.jpg" id="2_5s03l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_buwhn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_7j2j7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5s03l")
}],
"loop": false,
"name": &"opening",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tokc7"]
size = Vector2(460, 343)

[node name="letter" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_5s03l")

[node name="envelope" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_buwhn")
autoplay = "default"

[node name="scanbox" type="Area2D" parent="."]

[node name="scanarea" type="CollisionShape2D" parent="scanbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_tokc7")

[node name="text" type="RichTextLabel" parent="."]
visible = false
offset_left = -192.0
offset_top = -160.0
offset_right = 208.0
offset_bottom = 176.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 20
text = "Hi mister pubblic relations, I am a reporter, don't mind trying to figure out who, and i am going to expose the damage your company is doing to the envirovment, you either help me and become an hero or stay at your shitty job and go down rich but as a monster. Now 25 people have died in the amazon, 17 were kids, experts prediceted that the land will remain inlivable for at least two centuries, do the right thing."

[connection signal="animation_finished" from="envelope" to="." method="_on_envelope_animation_finished"]
[connection signal="mouse_entered" from="scanbox" to="." method="_on_scanbox_mouse_entered"]
[connection signal="mouse_exited" from="scanbox" to="." method="_on_scanbox_mouse_exited"]
